Update Homepage + Menu

--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Blog.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Blog.cshtml
@@ -53,7 +53,7 @@
     </div>
     <div class="section-area">
         <section class="blogs" id="blogs">
-            <h1 class="heading"> our <span>blogs</span> </h1>
+            <h1 class="heading">Our <span>Blogs</span> </h1>
 
             <div class="box-container">
 
