--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Menu.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Menu.cshtml
@@ -33,7 +33,6 @@
             <div class="total"></div>
         </div>
     </div>
-         <!-- View 1: Caffè Americano -->
     @{
         string[] overView = {"one__view-overlay", "two__view-overlay", "three__view-overlay", "four__view-overlay", "five__view-overlay", "six__view-overlay", "seven__view-overlay", "eight__view-overlay", "nine__view-overlay", "ten__view-overlay", "eleven__view-overlay", "twelve__view-overlay" };
         string[] classView = {"one__view", "two__view", "three__view", "four__view", "five__view", "six__view", "seven__view", "eight__view", "nine__view", "ten__view", "eleven__view", "twelve__view" };
@@ -126,42 +125,49 @@
             <h3>Large size (16 fl oz)</h3>
         </div>
     </div>
-    <div class="product-panel">
-        <div class="flex">
-            <!--Product-->
-            @{
-                string[] view = {"one__view__openBtn", "two__view__openBtn", "three__view__openBtn", "four__view__openBtn", "five__view__openBtn", "six__view__openBtn", "seven__view__openBtn", "eight__view__openBtn", "nine__view__openBtn", "ten__view__openBtn", "eleven__view__openBtn", "twelve__view__openBtn"};
-                string[] cart = {"one__cart__button", "two__cart__button", "three__cart__button", "four__cart__button", "five__cart__button", "six__cart__button", "seven__cart__button", "eight__cart__button", "nine__cart__button", "ten__cart__button", "eleven__cart__button", "twelve__cart__button"};
-                int i = 0;
-            }
-            @foreach(var items in Model){
-            
-            <div class="box">
-                <div class="img-container">
-                    <img src= @Url.Content("../img/img_products/" + items.HinhAnh)  alt="The product is currently not available" />
-                    <div class="box__btns">
-                        <a href="#!" class="box__btn @view[i].ToString()">
-                            View
-                        </a>
-                            <a href="#!" class="box__btn @cart[i].ToString()">
-                            Add to Cart
-                        </a>
-                    </div>
-                </div>
-                <h2>@items.TenSanPham</h2>
-                    <h3>@(items.GiaBan.Value.ToString("n0")) VND</h3>
-                </div>
-            if(i == 11){
-                    i = 0;
-                }
-                else{
-               i++;
-               }
-            
-            }   
+    <div class="main-area">
+        <div class="category-panel">
+            <ul>
+             <li><a class="dropdown-item" asp-controller="Home" asp-action="Menu" asp-route-target="all">Tất cả</a></li>
+              @await Component.InvokeAsync("MenuCategory")
+            </ul>
         </div>
-        @Html.PagedListPager(Model,page=>Url.Action("Menu",new {page=page}))
-    </div>
+        <div class="product-panel">
+            <div class="flex">
+                <!--Product-->
+                @{
+                    string[] view = {"one__view__openBtn", "two__view__openBtn", "three__view__openBtn", "four__view__openBtn", "five__view__openBtn", "six__view__openBtn", "seven__view__openBtn", "eight__view__openBtn", "nine__view__openBtn", "ten__view__openBtn", "eleven__view__openBtn", "twelve__view__openBtn"};
+                    string[] cart = {"one__cart__button", "two__cart__button", "three__cart__button", "four__cart__button", "five__cart__button", "six__cart__button", "seven__cart__button", "eight__cart__button", "nine__cart__button", "ten__cart__button", "eleven__cart__button", "twelve__cart__button"};
+                    int i = 0;
+                }
+                @foreach(var items in Model){
+                <div class="box">
+                    <div class="img-container">
+                        <img src= @Url.Content("../img/img_products/" + items.HinhAnh)  alt="The product is currently not available" />
+                        <div class="box__btns">
+                            <a href="#!" class="box__btn @view[i].ToString()">
+                                View
+                            </a>
+                                <a href="#!" class="box__btn @cart[i].ToString()">
+                                Add to Cart
+                            </a>
+                        </div>
+                    </div>
+                    <h2>@items.TenSanPham</h2>
+                        <h3>@(items.GiaBan.Value.ToString("n0")) VND</h3>
+                    </div>
+                if(i == 11){
+                        i = 0;
+                    }
+                    else{
+                   i++;
+                   }
+            
+                }   
+            </div>
+            @Html.PagedListPager(Model,page=>Url.Action("Menu",new {page=page}))
+        </div>
+     </div>
 
     @{
         string[] iCart = { "one1-cart-item", "two2-cart-item", "three3-cart-item", "four4-cart-item", "five5-cart-item", "six6-cart-item", "seven7-cart-item", "eight8-cart-item", "nine9-cart-item", "ten10-cart-item", "eleven11-cart-item", "twelve12-cart-item" };
@@ -173,6 +179,7 @@
         string[] iPrice = { "item-price1", "item-price2", "item-price3", "item-price4", "item-price5", "item-price6", "item-price7", "item-price8", "item-price9", "item-price10", "item-price11", "item-price12" };
         int k = 0;
     }
+   
     <div class="itemInCart" style="display: none">
         @foreach(var items in Model){
             <div id="@iCart[k].ToString()">
@@ -204,5 +211,6 @@
         }
 
     </div>
+
 
 
