--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_Layout.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/site.css" />
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Marck+Script&display=swap"
           rel="stylesheet" />
-    <link rel="icon" href="../img/favicon.png" />\
+    <link rel="icon" href="../img/favicon.png" />
 
 </head>
 <body>
