--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
@@ -58,7 +58,7 @@
                 <a asp-area="" asp-controller="Home" asp-action="Menu" class="menu-nav__link"> Menu </a>
             </li>
             <li class="menu-nav__item">
-                        <a asp-area="" asp-controller="Home" asp-action="Services" class="menu-nav__link"> Services </a>
+                 <a asp-area="" asp-controller="Home" asp-action="Services" class="menu-nav__link"> Services </a>
             </li>
             <li class="menu-nav__item">
                 <a asp-area="" asp-controller="Home" asp-action="Blog" class="menu-nav__link"> Blog </a>
@@ -109,23 +109,39 @@
             <img src="../img/loadcoffee.gif" alt="" class="load__gif">
         </div>
         @RenderBody()
-        <footer>
-            <div class="icons">
-                <a href="#!">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#!">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="#!">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#!">
-                    <i class="fab fa-snapchat-square"></i>
-                </a>
-            </div>
-            <div class="copyright">&copy; Copyright 2022 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> </div>
-            </footer>
+            <footer>
+                <div class="pages">
+                    <h1 class="title-pages">Pages</h1>
+                    <ul class="pages-text">
+                        <li class="desc-pages"><a asp-area="" asp-controller="Home" asp-action="Index" class="menu-nav__link"> Home </a></li>
+                        <li class="desc-pages"><a asp-area="" asp-controller="Home" asp-action="Menu" class="menu-nav__link"> Menu </a></li>
+                        <li class="desc-pages"><a asp-area="" asp-controller="Home" asp-action="Services" class="menu-nav__link"> Services </a></li>
+                        <li class="desc-pages"><a asp-area="" asp-controller="Home" asp-action="Blog" class="menu-nav__link"> Blog </a></li>
+                        <li class="desc-pages"><a asp-area="" asp-controller="Home" asp-action="Contact" class="menu-nav__link"> Contact </a></li>
+                    </ul>
+                </div>
+                <div class="description">
+                    <h1 class="title-description">Description</h1>
+                    <p class="desc-description">The Space Coffee is a cosy place where friends meet to share coffee, cakes and light meals. At night, it is transformed into a vibey eatery.</p>
+                </div>
+                <div class="follow">
+                    <h1 class="title-follow">Follow Us</h1>
+                    <div class="icons">
+                        <a href="#!">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#!">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#!">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#!">
+                            <i class="fab fa-snapchat-square"></i>
+                        </a>
+                    </div>
+                </div>
+             </footer>
         </section>
     </main>
     <script src="https://kit.fontawesome.com/c057664144.js" crossorigin="anonymous"></script>
