--- a/TheCoffeeSpace_WebApplication(MVC)/wwwroot/css/main.css
+++ b/TheCoffeeSpace_WebApplication(MVC)/wwwroot/css/main.css
@@ -53,7 +53,7 @@
     background-color: #db8637;
     margin: 1rem auto;
     padding: 1.5rem;
-    max-width: 1170px;
+    max-width: 950px;
 }
 
 .menu .flex .box {
@@ -179,17 +179,17 @@
 }
 
 .main-area h1 {
-        font-size: 2rem;
-        text-align: center;
-        margin: 20px
-    }
+    font-size: 2rem;
+    /*text-align: center;
+    /*margin: 20px*/
+}
 
 .main-area p {
-        font-size: 1.5rem;
-        align-items: center;
+    font-size: 1.5rem;
+    /* align-items: center;
         text-align: center;
-        margin: 10px 20%
-    }
+        margin: 10px 20%*/
+}
 
 .home .main-area .section-area .section-A {
     padding: 3rem 0;
@@ -1245,7 +1245,7 @@ footer .icons {
 }
 
 footer .icons a {
-    color: #151515;
+    color: white;
     outline: none;
     text-decoration: none;
     margin: 0.5rem;
@@ -1261,3 +1261,4 @@ footer .copyright {
     margin-top: 2rem;
     float: right
 }
+
