--- a/TheCoffeeSpace_WebApplication(MVC)/wwwroot/css/site.css
+++ b/TheCoffeeSpace_WebApplication(MVC)/wwwroot/css/site.css
@@ -616,6 +616,11 @@
     color:#ccc;
     padding:10px 0;
 }
+
+.blog .heading{
+    margin: 10px 0;
+}
+
 /*=============== END CSS SLIDER BLOG ===============*/
 
 .section-area section {
@@ -772,3 +777,190 @@
     display: inline;
     list-style: none;
 }
+.category-panel {
+    background-color: #db8637;
+    margin: 1rem auto;
+    padding: 1.5rem;
+    width: 20%;
+}
+
+.category-panel li{
+    list-style: none;
+}
+.category-panel li a{
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+}
+
+.menu .main-area {
+    display: flex;
+}
+
+
+.who-we-are {
+    display: flex;
+    padding: 100px 100px 100px 100px;
+}
+.who-images {
+    display: flex;
+    gap: 10px;
+}
+
+.img-who {
+    width: 32%;
+    height: auto;
+}
+
+.who-text {
+    margin-left: 30px;
+}
+
+.title-who {
+    font-size: 36px;
+    margin-bottom: 15px;
+}
+
+.desc-who {
+    font-size: 14px;
+    color: gray;
+    font-weight: lighter;
+    width: 300px;
+    line-height: 24px;
+    margin-bottom: 30px;
+}
+
+.button-learn {
+    padding: 10px 55px 10px 55px;
+    background-color: orange;
+    border: none;
+    color: #fff;
+    border-radius: 20px;
+    font-size: 12px;
+}
+
+.menu_list_home {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0
+}
+.menu_banner {
+    flex: 0 0 calc(50% - 30px);
+    margin: 0 15px 40px 15px;
+}
+
+.menu_banner > a {
+    display: block;
+    padding-top: 65%;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 16px 0px #0000001F;
+}
+
+.menu_banner.has_text > a {
+    padding-top: 48%;
+}
+
+.menu_banner > a > img {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
+.menu_item {
+    background: #fff;
+    -ms-flex: 0 0 calc(33.333% - 30px);
+    -webkit-flex: 0 0 calc(33.333% - 30px);
+    flex: 0 0 calc(33.333% - 30px);
+    margin: 0 15px 40px;
+    min-height: 145px;
+}
+
+.menu_item {
+    background: transparent;
+    -webkit-flex: 0 0 calc(25% - 30px);
+    flex: 0 0 calc(25% - 30px);
+}
+
+.menu_item .menu_item_image {
+    position: relative;
+}
+
+.menu_item .menu_item_image img {
+    width: 100%;
+}
+
+.menu_item .menu_item_image > a {
+    border-radius: 10px;
+    overflow: hidden;
+    display: block;
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+    box-shadow: 0px 0px 13px 0px #00000040;
+}
+
+.menu_item .menu_item_image > a > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.menu_item_info a {
+    text-decoration: none;
+    color: black;
+}
+
+footer {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    background-color: #403832;
+    padding: 60px 80px 80px 100px;
+    color: #fff;
+}
+.title-pages,
+.title-description,
+.title-follow {
+    font-size: 24px;
+    font-weight: lighter;
+    border-bottom: 1px solid gray;
+    padding-bottom: 5px;
+}
+
+.pages-text {
+    margin-top: 20px;
+}
+.desc-pages {
+    list-style: none;
+    font-size: 16px;
+    margin: 2px;
+}
+
+.desc-pages a {
+    text-decoration:none;
+    color: white;
+}
+.description {
+    margin-left: 30px;
+    width: 600px;
+    margin-right: 30px;
+}
+
+.desc-description {
+    color: white;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+.icons {
+    display: flex;
+    gap: 10px;
+}
+
+
+
