Get product details from database Edit Contact + Homepage + Layout + Menu

--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Contact.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Contact.cshtml
@@ -13,13 +13,13 @@
             <h3>One email, phone call, or block away.</h3>
             <div class="sections">
                 <div class="sections-section">
-                    <i class="fas fa-envelope"></i> Email <p>dripcafe@email.com</p>
+                    <i class="fas fa-envelope"></i> Email <p>TheSpaceCoffee@yrzj3.onmicrosoft.com</p>
                 </div>
                 <div class="sections-section">
-                <i class="fas fa-mobile-alt"></i> Phone <p>+1 (541) 741-5527</p>
+                <i class="fas fa-mobile-alt"></i> Phone <p>+84 988 xxx x75</p>
                 </div>
                 <div class="sections-section">
-                <i class="fas fa-map-marker-alt"></i> Address <p>351 New York City, NY</p>
+                <i class="fas fa-map-marker-alt"></i> Address <p>3 Cau Giay, Cau Giay, Dong Da, Ha Noi</p>
                 </div>
             </div>
             <div class="icons">
