--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Index.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Index.cshtml
@@ -43,19 +43,19 @@
             <div class="section-B">
                   <div class="menu_list_home">
 	                <div class="menu_banner">
-		                <a title="BROWN" sugar="" href="https://thecoffeehouse.com/collections/ca-phe"><img alt="BROWN SUGAR" class=" lazyloaded" src="https://file.hstatic.net/1000075078/file/banner_app_-_1029x720_edaa4031d7e048f49bf3647d686c701d.jpg" data-src="https://file.hstatic.net/1000075078/file/banner_app_-_1029x720_edaa4031d7e048f49bf3647d686c701d.jpg"></a>
+                        <a title="BANNER" asp-controller="Home" asp-action="Menu" asp-route-target="CF"><img alt="ADVERTISING BANNER" class=" lazyloaded" src="https://file.hstatic.net/1000075078/file/banner_app_-_1029x720_edaa4031d7e048f49bf3647d686c701d.jpg" data-src="https://file.hstatic.net/1000075078/file/banner_app_-_1029x720_edaa4031d7e048f49bf3647d686c701d.jpg"></a>
 	                </div>
 	                
                     @foreach(var items in Model){
 	                <div class="menu_item">
 		                <div class="menu_item_image">
-			                <a href="/products/cloudfee-hanh-nhan-nuong" title="@items.TenSanPham">
-                                <img src= @Url.Content("../img/img_products/" + items.HinhAnh)  alt="The product is currently not available" />
+			                <a title="@items.TenSanPham" asp-controller="Home" asp-action="Menu" asp-route-target="CF">
+                                <img src= @Url.Content("../img/img_products/" + items.HinhAnh)  alt="The product is currently not available" /></a>
 			                <ul class="labels">
 			                </ul>
 		                </div>
 		                <div class="menu_item_info">
-			                <h3><a href="/products/cloudfee-hanh-nhan-nuong" title="@items.TenSanPham">@items.TenSanPham</a></h3>
+                                <h3><a asp-controller="Home" asp-action="Menu" asp-route-target="CF" title="@items.TenSanPham">@items.TenSanPham</a></h3>
                                 <div class="price_product_item">@(items.GiaBan.Value.ToString("n0")) VND</div>
 		                </div>
 	                </div>
