--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
@@ -47,7 +47,7 @@
             <li class="menu-nav__item">
               <a asp-area="" asp-controller="Home" asp-action="Index" class="logo menu-nav__link">
                 <img src="../img/favicon.png" />
-                <span class="logo-first">Space</span>
+                <span class="logo-first">The Space</span>
                 <span class="logo-last">Coffee</span>
               </a>
             </li>
@@ -143,9 +143,12 @@
     </main>
     <script src="https://kit.fontawesome.com/c057664144.js" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
     <script src="../js/script.js"></script>
     <script src="../js/site.js"></script>
     <script src="../js/menu.js"></script>
+
   </body>
 </html>
