--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Menu.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Home/Menu.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Views/Shared/_LayoutDripcafe.cshtml";
 }
 <header>
+    <!-- Shopping Cart -->
     <div class="cart-overlay">
         <div class="cart">
             <div class="cart__closeBtn">
@@ -33,6 +34,7 @@
             <div class="total"></div>
         </div>
     </div>
+    <!--Variables containing class-->
     @{
         string[] overView = {"one__view-overlay", "two__view-overlay", "three__view-overlay", "four__view-overlay", "five__view-overlay", "six__view-overlay", "seven__view-overlay", "eight__view-overlay", "nine__view-overlay", "ten__view-overlay", "eleven__view-overlay", "twelve__view-overlay" };
         string[] classView = {"one__view", "two__view", "three__view", "four__view", "five__view", "six__view", "seven__view", "eight__view", "nine__view", "ten__view", "eleven__view", "twelve__view" };
@@ -40,7 +42,8 @@
         string[] contentView = {"one__view-content", "two__view-content", "three__view-content", "four__view-content", "five__view-content", "six__view-content", "seven__view-content", "eight__view-content", "nine__view-content", "ten__view-content", "eleven__view-content", "twelve__view-content" };
         int j = 0;
     }
-      @foreach(var items in Model){
+    <!--Display product details from database-->
+    @foreach(var items in Model){
           <div class="@overView[j].ToString()">
             <div class="@classView[j].ToString()">
               <div class="@closeView[j].ToString()">
@@ -114,8 +117,11 @@
             j++;
            }
       }
+     <!--EnD-->
 </header>
+
 <section class="menu">
+    <!--Start Promotion Banners-->
     <div class="pic-area">
         <div class="pic-area-text">
             <h2>Limited Time Offer:</h2>
@@ -123,16 +129,20 @@
             <h3>Large size (16 fl oz)</h3>
         </div>
     </div>
+    <!--EnD-->
     <div class="main-area">
+        <!--Start Category-->
         <div class="category-panel">
             <ul>
              <li><a class="dropdown-item" asp-controller="Home" asp-action="Menu" asp-route-target="all">Tất cả</a></li>
               @await Component.InvokeAsync("MenuCategory")
             </ul>
         </div>
+        <!--End Category-->
         <div class="product-panel">
             <div class="flex">
                 <!--Product-->
+                <!--Variables containing class-->
                 @{
                     string[] view = {"one__view__openBtn", "two__view__openBtn", "three__view__openBtn", "four__view__openBtn", "five__view__openBtn", "six__view__openBtn", "seven__view__openBtn", "eight__view__openBtn", "nine__view__openBtn", "ten__view__openBtn", "eleven__view__openBtn", "twelve__view__openBtn"};
                     string[] cart = {"one__cart__button", "two__cart__button", "three__cart__button", "four__cart__button", "five__cart__button", "six__cart__button", "seven__cart__button", "eight__cart__button", "nine__cart__button", "ten__cart__button", "eleven__cart__button", "twelve__cart__button"};
@@ -170,7 +180,7 @@
     <div class="pop">
         <div class="message">Sản phẩm đã được thêm vào giỏ hàng</div>
     </div>
-
+    <!--Variables containing class-->
     @{
         string[] iCart = { "one1-cart-item", "two2-cart-item", "three3-cart-item", "four4-cart-item", "five5-cart-item", "six6-cart-item", "seven7-cart-item", "eight8-cart-item", "nine9-cart-item", "ten10-cart-item", "eleven11-cart-item", "twelve12-cart-item" };
         string[] iRemove = { "remove-item-1", "remove-item-2", "remove-item-3", "remove-item-4", "remove-item-5", "remove-item-6", "remove-item-7", "remove-item-8", "remove-item-9", "remove-item-10", "remove-item-11", "remove-item-12" };
@@ -181,7 +191,7 @@
         string[] iPrice = { "item-price1", "item-price2", "item-price3", "item-price4", "item-price5", "item-price6", "item-price7", "item-price8", "item-price9", "item-price10", "item-price11", "item-price12" };
         int k = 0;
     }
-   
+    <!--Product in Cart-->
     <div class="itemInCart" style="display: none">
         @foreach(var items in Model){
             <div id="@iCart[k].ToString()">
@@ -211,8 +221,7 @@
             }
 
         }
-
     </div>
-
+    <!--EnD-->
 
 
