--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
@@ -12,13 +12,14 @@
   </head>
   <body>
     <header>
+      <!--Start Header-->
       <div class="second-header">
         <div class="menu-btn">
           <span class="menu-btn__burger"></span>
         </div>
-
         <nav class="nav">
           <ul class="menu-nav">
+            <!--Start Search Bar-->
             <li class="menu-nav__item">
                 <div class="search-top-wrapper">
 	                <form id="frm_search_head" action="/search">
@@ -29,9 +30,13 @@
 	                </form>
                 </div>
             </li>
+            <!--End Search Bar-->
+            <!--Start Text Rotate-->
             <li class="menu-nav__item header-text">
                         <span class="txt-rotate" data-period="4000" data-rotate="[&quot;THE SPACE COFFEE&quot;,&quot;FROM IT5 WITH LOVE&quot;,&quot;WELCOME TO THE SPACE COFFEE!&quot;,&quot;SIGN BY ENNHNAHK&quot;]"><span class="wrap">PRESE</span><span class="typed-cursor">|</span>
             </li>
+            <!--End Text Rotate-->
+            <!--Start Button Login-->
             <li class="menu-nav__item">
               <a asp-area="" asp-controller="Home" asp-action="SignIn" class="sign-in menu-nav__link">
                 <i class="fa fa-user" aria-hidden="true"></i>
@@ -42,8 +47,10 @@
                 Sign Up
               </a>
             </li>
+            <!--End Button Login-->
             <br/>
             <br/>
+            <!--Start Navigation Bar-->
             <li class="menu-nav__item">
               <a asp-area="" asp-controller="Home" asp-action="Index" class="logo menu-nav__link">
                 <img src="../img/favicon.png" />
@@ -71,11 +78,11 @@
                 <i class="fa fa-cart-plus" aria-hidden="true"></i>
               </a>
             </li>
+            <!--End Navigation Bar-->
           </ul>
         </nav>
       </div>
       <!-- Shopping Cart -->
-
       <div class="cart-overlay">
         <div class="cart">
           <div class="cart__closeBtn">
@@ -86,7 +93,6 @@
             <span class="span-primary">Shopping</span> Cart
             <i class="fa fa-cart-arrow-down"></i>
           </h2>
-
           <!-- JS will add items here -->
           <div class="item1-display"></div>
           <div class="item2-display"></div>
@@ -106,6 +112,7 @@
     </header>
     <main>
         @RenderBody()
+            <!--Start Footer-->
             <footer>
                 <div class="pages">
                     <h1 class="title-pages">Pages</h1>
@@ -139,13 +146,13 @@
                     </div>
                 </div>
              </footer>
+            <!--End Footer-->
         </section>
     </main>
     <script src="https://kit.fontawesome.com/c057664144.js" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
     <script src="../js/script.js"></script>
     <script src="../js/site.js"></script>
     <script src="../js/menu.js"></script>
