--- a/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
+++ b/TheCoffeeSpace_WebApplication(MVC)/Views/Shared/_LayoutDripcafe.cshtml
@@ -107,6 +107,8 @@
           <div class="item11-display"></div>
           <div class="item12-display"></div>
           <div class="total"></div>
+          <br />
+          <div><a class="pay" href=""></a></div>
         </div>
       </div>
     </header>
